<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event110MetreHurdles">

    <ImageView
        android:id="@+id/iv110MHurdlesLogo"
        android:layout_width="146dp"
        android:layout_height="158dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hurdles" />

    <TextView
        android:id="@+id/tv110MHurdlesTitle"
        android:layout_width="225dp"
        android:layout_height="114dp"
        android:layout_marginTop="38dp"
        android:text="@string/_110_metre_hurdles_title"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/iv110MHurdlesLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="376dp"
        android:layout_height="95dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv110MHurdlesRules">

        <ImageView
            android:id="@+id/iv110MHurdlesRollDie1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv110MHurdlesRollDie2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv110MHurdlesRollDie1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv110MHurdlesRollDie3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv110MHurdlesRollDie2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv110MHurdlesRollDie4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv110MHurdlesRollDie3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv110MHurdlesRollDie5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv110MHurdlesRollDie4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv110MHurdlesRollsLeftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/rolls_left_label"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/tv110MHurdlesRollsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/rolls_left_text_110MHurdles"
        android:textSize="60sp"
        app:layout_constraintStart_toEndOf="@+id/tv110MHurdlesRollsLeftLabel"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/button_110MHurdles_Roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="21dp"
        android:text="@string/roll_button_text"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv110MHurdlesRollsLeftLabel" />

    <Button
        android:id="@+id/button_110MHurdles_Keep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/keep_button_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv110MHurdlesRollsLeft" />

    <Button
        android:id="@+id/button_110MHurdles_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="38dp"
        android:text="@string/button_done_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_110MHurdles_Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/replay_button_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_110MHurdles_Roll" />

    <TextView
        android:id="@+id/tv110MHurdlesScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="67dp"
        android:text="@string/score_label"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/button_110MHurdles_Reset"
        app:layout_constraintTop_toBottomOf="@+id/button_110MHurdles_Keep" />

    <TextView
        android:id="@+id/tv110MHurdlesScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="51dp"
        android:text="@string/score_text_empty"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/tv110MHurdlesScoreLabel"
        app:layout_constraintTop_toBottomOf="@+id/button_110MHurdles_Keep" />

    <TextView
        android:id="@+id/tv110MHurdlesRules"
        android:layout_width="371dp"
        android:layout_height="84dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/rules_110MHurdles"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv110MHurdlesLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>