<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event100Metres">

    <ImageView
        android:id="@+id/iv100MLogo"
        android:layout_width="115dp"
        android:layout_height="123dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv100MTotalScoreLabel"
        app:srcCompat="@drawable/running" />

    <TextView
        android:id="@+id/tv100MTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_100_metres_title"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl100MRolledDice"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/iv100MrollDie1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MrollDie2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv100MrollDie1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MrollDie3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv100MrollDie2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MrollDie4"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv100MrollDie3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_100M_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="104dp"
        android:text="@string/roll_button_text"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cl100MRolledDice" />

    <Button
        android:id="@+id/button_100M_keep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:enabled="false"
        android:text="@string/keep_button_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cl100MRolledDice" />

    <TextView
        android:id="@+id/tv100MRollsLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="13dp"
        android:text="@string/rolls_left_label_100M"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/iv100MLogo"
        app:layout_constraintTop_toBottomOf="@+id/tv100MTitle" />

    <TextView
        android:id="@+id/tv100MRollsRemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/rolls_left_text"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/tv100MRollsLabel"
        app:layout_constraintTop_toBottomOf="@+id/tv100MTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl100MBankedDice"
        android:layout_width="350dp"
        android:layout_height="110dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv100MBankLabel">

        <ImageView
            android:id="@+id/iv100MbankDie1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MbankDie5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv100MbankDie2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MbankDie7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv100MbankDie4"
            app:layout_constraintTop_toBottomOf="@+id/iv100MbankDie5"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MbankDie8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv100MbankDie7"
            app:layout_constraintTop_toBottomOf="@+id/iv100MbankDie6"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MbankDie6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv100MbankDie5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MbankDie2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv100MbankDie1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MbankDie3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv100MbankDie1"
            app:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/iv100MbankDie4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv100MbankDie3"
            app:layout_constraintTop_toBottomOf="@+id/iv100MbankDie2"
            app:srcCompat="@drawable/die1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv100MScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/score_label"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/tv100MScore"
        app:layout_constraintTop_toBottomOf="@+id/cl100MBankedDice" />

    <TextView
        android:id="@+id/tv100MScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/score_text_100M"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl100MBankedDice" />

    <TextView
        android:id="@+id/tv100MBankLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/saved_dice_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_100M_roll" />

    <Button
        android:id="@+id/button_100M_replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="6dp"
        android:text="@string/replay_button_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl100MBankedDice" />

    <Button
        android:id="@+id/button_100M_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="3dp"
        android:text="@string/done_button_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_100M_replay" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="349dp"
        android:layout_height="109dp"
        android:layout_marginTop="8dp"
        android:text="@string/rules_text_100M"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv100MRollsRemain" />

    <TextView
        android:id="@+id/tv100MTotalScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="Total Score:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv100MTotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="12dp"
        android:text="0"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tv100MTotalScoreLabel"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>